opam-version: "2.0"
maintainer: "dev@clarus.me"
name:         "Io"
homepage: "https://github.com/clarus/io"
dev-repo: "git+https://github.com/clarus/io.git"
bug-reports: "https://github.com/clarus/io/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [ "dune" "build" "-p" name "-j" jobs ]

depends: [
  "ocaml"
  "coq" {>= "8.5"}
]
synopsis: "A library for effects in Coq"
tags: [
  "keyword:effects"
  "logpath:Io"
]
